--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="index.html">Home</a>
         </li>   
-        <li><a href="deixeseudepoimento.html">Deixe seu depoimento</a>
+        <li><a href="deixesuamensagem.html">Deixe seu depoimento</a>
         </li>  
     </ul>
 
