Primeiros passos css

--- a/deixesuamensagem.html
+++ b/deixesuamensagem.html
@@ -1,45 +1,88 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deixe sua mensagem</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
- 
-    <ul>
+
+    <ul class="menu">
         <li><a href="index.html">Home</a>
-        </li>   
+        </li>
+        <li>
+            <a href="hobbie.html">Livros favoritos</a>
+        </li>
         <li><a href="deixesuamensagem.html">Deixe sua mensagem</a>
-        </li>  
+        </li>
+    </ul>
     </ul>
 
-    <h1>Deixe sua mensagem</h1>
+    <h1 class="titulo1">Deixe sua mensagem</h1>
+    
+    <div class="container">
+    <div class="contato">
+        <form class="form">
+            <div class="info">
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome">
+            </div>
+            <div class="info">
+                <label for="email">E-mail:</label>
+                <input type="email" id="email">
+            </div>
+            <div class="info">
+                <label for="mensagem">Mensagem:</label> <br>
+                <textarea name="dmensagem" id="mensagem" cols="30" rows="10">
+            </textarea>
+            </div>
+           
+            <button>Enviar</button>
 
-    <form>
-       <label for="nome">Nome:</label>
-       <input type="text" id="nome">
-       <br>
-       <label for="email">E-mail:</label>
-       <input type="email" id="email">
-       <br>
-       <label for="mensagem">Mensagem:</label> <br>
-       <textarea name="dmensagem" id="mensagem" cols="30" rows="10"></textarea>
-       <br><button>Enviar</button>
+        </form>
+    </div>
 
-    </form>
+    <div class="mapa">
+        <h2>Endereço</h2>
+        <p> <b>Porto Digital - NGPD (Núcleo de Gestão do Porto Digital)</b></p>
+        <p>Cais do Apolo, 222 </p>
+        <p>Recife, PE</p>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31603.00389619333!2d-34.873927!3d-8.063128!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7caecfbcc5347f69!2sPorto%20Digital%20-%20NGPD%20(N%C3%BAcleo%20de%20Gest%C3%A3o%20do%20Porto%20Digital)!5e0!3m2!1spt-PT!2sbr!4v1637779908194!5m2!1spt-PT!2sbr"
+            width="400" 
+            height="300" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy">
+        </iframe>
+    </div>
+   </div>
 
-    <h2>Endereço</h2>
-    <p> <b>Porto Digital - NGPD (Núcleo de Gestão do Porto Digital)</b></p>
-    <p>Cais do Apolo, 222 </p>
-    <p>Recife, PE</p>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15801.501948096666!2d-34.873927!3d-8.063128!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7caecfbcc5347f69!2sPorto%20Digital%20-%20NGPD%20(N%C3%BAcleo%20de%20Gest%C3%A3o%20do%20Porto%20Digital)!5e0!3m2!1spt-PT!2sbr!4v1637693614166!5m2!1spt-PT!2sbr" 
-    width="600" 
-    height="450"
-    style="border:0;" 
-    allowfullscreen="" 
-    loading="lazy"></iframe>
+    <footer>
+        <div class="links">
+            <a href="https://www.linkedin.com/in/renata-floro/" target="_blank">
+                <img class="tm-social" src="./assets/img/linkedin.png" alt="logolinkedin">
+            </a>
+            <a href="https://github.com/renatafloro" target="_blank">
+                <img class="tm-social" src="./assets/img/github.png" alt="logogithub">
+            </a>
+            <a href="https://www.instagram.com/re_lendo_/" target="_blank">
+                <img class="tm-social" src="./assets/img/instagram.png" alt="logoinstagram">
+            </a>
+
+        <p >
+            Todos os direitos reservados: Renata Floro &copy;
+        </p>
+         </div>
+    </footer>
+
+
+
 
 </body>
+
 </html>
