--- a/deixesuamensagem.html
+++ b/deixesuamensagem.html
@@ -23,44 +23,42 @@
     </ul>
 
     <h1 class="titulo1">Deixe sua mensagem</h1>
-    
-    <div class="container">
-    <div class="contato">
-        <form class="form">
-            <div class="info">
-                <label for="nome">Nome:</label>
-                <input type="text" id="nome">
-            </div>
-            <div class="info">
-                <label for="email">E-mail:</label>
-                <input type="email" id="email">
-            </div>
-            <div class="info">
-                <label for="mensagem">Mensagem:</label> <br>
-                <textarea name="dmensagem" id="mensagem" cols="30" rows="10">
-            </textarea>
-            </div>
-           
-            <button>Enviar</button>
 
-        </form>
-    </div>
+    <!-- <div class="container"> -->
+    <div class="formulario">
+        <div class="form">
 
-    <div class="mapa">
-        <h2>Endereço</h2>
-        <p> <b>Porto Digital - NGPD (Núcleo de Gestão do Porto Digital)</b></p>
-        <p>Cais do Apolo, 222 </p>
-        <p>Recife, PE</p>
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31603.00389619333!2d-34.873927!3d-8.063128!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7caecfbcc5347f69!2sPorto%20Digital%20-%20NGPD%20(N%C3%BAcleo%20de%20Gest%C3%A3o%20do%20Porto%20Digital)!5e0!3m2!1spt-PT!2sbr!4v1637779908194!5m2!1spt-PT!2sbr"
-            width="400" 
-            height="300" 
-            style="border:0;" 
-            allowfullscreen="" 
-            loading="lazy">
-        </iframe>
+            <form>
+                <div class="campos">
+                    <label for="nome">Nome:</label>
+                    <input type="text" id="nome">
+                </div>
+                <div class="campos">
+                    <label for="email">E-mail:</label>
+                    <input type="email" id="email">
+                </div>
+                <div class="campos">
+                    <label for="mensagem">Mensagem:</label> <br>
+                    <textarea name="mensagem" id="mensagem" cols="60" rows="5">
+                </textarea>
+                </div>
+
+                <button>Enviar</button>
+            </form>
+        </div>
+
+        <div class="mapa">
+            <h2 class="titulo2">Endereço</h2>
+            <p> <b>Porto Digital - NGPD (Núcleo de Gestão do Porto Digital)</b></p>
+            <p>Cais do Apolo, 222 </p>
+            <p>Recife, PE</p>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31603.00389619333!2d-34.873927!3d-8.063128!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7caecfbcc5347f69!2sPorto%20Digital%20-%20NGPD%20(N%C3%BAcleo%20de%20Gest%C3%A3o%20do%20Porto%20Digital)!5e0!3m2!1spt-PT!2sbr!4v1637779908194!5m2!1spt-PT!2sbr"
+                width="400" height="250" frameborder="0" style="border: 0" allowfullscreen="" aria-hidden="false"
+                tabindex="0"></iframe>
+        </div>
     </div>
-   </div>
+    </div>
 
     <footer>
         <div class="links">
@@ -74,14 +72,11 @@
                 <img class="tm-social" src="./assets/img/instagram.png" alt="logoinstagram">
             </a>
 
-        <p >
-            Todos os direitos reservados: Renata Floro &copy;
-        </p>
-         </div>
+            <p>
+                Todos os direitos reservados: Renata Floro &copy;
+            </p>
+        </div>
     </footer>
-
-
-
 
 </body>
 
