--- a/hobbie.html
+++ b/hobbie.html
@@ -24,10 +24,10 @@
     </div>
 
     <h1 class="titulo1">Alguns livros favoritos</h1>
-  
+    <h2 class="titulo2">Anne de Green Gables</h2>
     <div class="container">
         <img class="img" src="./assets/img/anne.jpg" alt="Capa do livro Anne de Green Gables">
-        <h2 class="titulo2">Anne de Green Gables</h2>
+
         <p class="texto">
             Anne é uma pobre órfã que foi enviada por engano para a fazenda de Green Gables,
             pois os irmãos Marilla e Matthew tinham a intenção de adotar um menino para auxiliar
@@ -38,49 +38,120 @@
             pensamentos pertinentes sobre os obstáculos e as escolhas da vida de qualquer pré-adolescente.
         </p>
     </div>
-    <img class="img" src="./assets/img/tetoparadois.jpg" alt="Capa do livro Teto para dois">
     <h2 class="titulo2">Teto para dois</h2>
-    <p class="texto">
-        Eles dividem um apartamento com uma cama só. Ele dorme de dia, ela, à noite.
-        Os dois nunca se encontraram, mas estão prestes a descobrir que, para se sentir em casa,
-        às vezes é preciso jogar as regras pela janela.
+    <div class="container">
+        <img class="img" src="./assets/img/tetoparadois.jpg" alt="Capa do livro Teto para dois">
+        <p class="texto">
+            Eles dividem um apartamento com uma cama só. Ele dorme de dia, ela, à noite.
+            Os dois nunca se encontraram, mas estão prestes a descobrir que, para se sentir em casa,
+            às vezes é preciso jogar as regras pela janela.<br>
 
-        Três meses após o término do seu relacionamento, Tiffy finalmente sai do apartamento do ex-namorado.
-        Agora ela precisa para ontem de um lugar barato para morar. Contrariando os amigos,
-        ela topa um acordo bastante inusitado.
+            Três meses após o término do seu relacionamento, Tiffy finalmente sai do apartamento do ex-namorado.
+            Agora ela precisa para ontem de um lugar barato para morar. Contrariando os amigos,
+            ela topa um acordo bastante inusitado.<br>
 
-        Leon está enrolado com questões financeiras e tem uma ideia pouco convencional para arranjar
-        dinheiro rápido: sublocar seu apartamento, onde fica apenas no período da manhã e da tarde nos dias úteis,
-        já que passa os finais de semana com a namorada e trabalha como enfermeiro no turno da noite.
-        Só que tem um detalhe importante: o lugar tem apenas uma cama.
+            Leon está enrolado com questões financeiras e tem uma ideia pouco convencional para arranjar
+            dinheiro rápido: sublocar seu apartamento, onde fica apenas no período da manhã e da tarde nos dias úteis,
+            já que passa os finais de semana com a namorada e trabalha como enfermeiro no turno da noite.
+            Só que tem um detalhe importante: o lugar tem apenas uma cama.<br>
 
-        Sem nunca terem se encontrado pessoalmente, Leon e Tiffy fecham um contrato de seis meses e
-        passam a resolver as trivialidades do dia a dia por Post-its espalhados pela casa.
-        Mas será que essa solução aparentemente perfeita resiste a um ex-namorado obsessivo,
-        uma namorada ciumenta, um irmão encrencado, dois empregos exigentes e alguns amigos superprotetores?
-    </p>
-    <img class="img" src="./assets/img/parasir.jpg" alt="Capa do livro Para Sir. Phillip, como amor">
-
-    <p class="texto">
-    <h2 class="titulo2">Para Sir. Phillip, como amor</h2>
-    Eloise Bridgerton é uma jovem simpática e extrovertida, cuja forma preferida de comunicação sempre foram as cartas,
-    nas quais sua personalidade se torna ainda mais cativante. Quando uma prima distante morre, ela decide escrever
-    para o viúvo e oferecer as condolências.
-    Ao ser surpreendido por um gesto tão amável vindo de uma desconhecida, Sir Phillip resolve retribuir a atenção
-    e responder. Assim, os dois começam uma instigante troca de correspondências. Ele logo descobre que Eloise,
-    além de uma solteirona que nunca encontrou o par perfeito, é uma confidente de rara inteligência.
-    E ela fica sabendo que Sir Phillip é um cavalheiro honrado que quer encontrar uma esposa para ajudá-lo na criação
-    de seus dois filhos órfãos.
-    Após alguns meses, uma das cartas traz uma proposta peculiar: o que Eloise acharia de passar uma temporada
-    com Sir Phillip para os dois se conhecerem melhor e, caso se deem bem, pensarem em se casar?
-    Ela aceita o convite, mas em pouco tempo eles se dão conta de que, ao vivo, não são bem como imaginaram.
-    Ela é voluntariosa e não para de falar, e ele é temperamental e rude, com um comportamento bem
-    diferente dos homens da alta sociedade londrina. Apesar disso, nos raros momentos em que Eloise fecha a boca,
-    Phillip só pensa em beijá-la. E cada vez que ele sorri, o resto do mundo desaparece e ela só quer se jogar
-    em seus braços.
-    Agora os dois precisam descobrir se, mesmo com todas as suas imperfeições, foram feitos um para o outro.
-    </p>
+            Sem nunca terem se encontrado pessoalmente, Leon e Tiffy fecham um contrato de seis meses e
+            passam a resolver as trivialidades do dia a dia por Post-its espalhados pela casa.
+            Mas será que essa solução aparentemente perfeita resiste a um ex-namorado obsessivo,
+            uma namorada ciumenta, um irmão encrencado, dois empregos exigentes e alguns amigos superprotetores?
+        </p>
     </div>
+    <h2 class="titulo2">Para Sir. Phillip, com amor</h2>
+    <div class="container">
+        <img class="img" src="./assets/img/parasir.jpg" alt="Capa do livro Para Sir. Phillip, como amor">
+        <p class="texto">
+            Eloise Bridgerton é uma jovem simpática e extrovertida, cuja forma preferida de comunicação sempre foram as
+            cartas,
+            nas quais sua personalidade se torna ainda mais cativante. Quando uma prima distante morre, ela decide
+            escrever
+            para o viúvo e oferecer as condolências.<br>
+            Ao ser surpreendido por um gesto tão amável vindo de uma desconhecida, Sir Phillip resolve retribuir a
+            atenção
+            e responder. Assim, os dois começam uma instigante troca de correspondências. Ele logo descobre que Eloise,
+            além de uma solteirona que nunca encontrou o par perfeito, é uma confidente de rara inteligência.
+            E ela fica sabendo que Sir Phillip é um cavalheiro honrado que quer encontrar uma esposa para ajudá-lo na
+            criação
+            de seus dois filhos órfãos.<br>
+            Após alguns meses, uma das cartas traz uma proposta peculiar: o que Eloise acharia de passar uma temporada
+            com Sir Phillip para os dois se conhecerem melhor e, caso se deem bem, pensarem em se casar?
+            Ela aceita o convite, mas em pouco tempo eles se dão conta de que, ao vivo, não são bem como imaginaram.
+            Ela é voluntariosa e não para de falar, e ele é temperamental e rude, com um comportamento bem
+            diferente dos homens da alta sociedade londrina. Apesar disso, nos raros momentos em que Eloise fecha a
+            boca,
+            Phillip só pensa em beijá-la. E cada vez que ele sorri, o resto do mundo desaparece e ela só quer se jogar
+            em seus braços.<br>
+            Agora os dois precisam descobrir se, mesmo com todas as suas imperfeições, foram feitos um para o outro.
+        </p>
+    </div>
+    <h2 class="titulo2">A cinco passos de você</h2>
+    <div class="container">
+        <img class="img" src="./assets/img/acincopassos.jpg" alt="Capa do livro A cinco passos de você">
+        <p class="texto">
+            Stella Grant gosta de controle. Ela parece uma adolescente típica, mas em sua rotina há listas de tarefas
+            e inúmeros remédios que deve tomar para controlar a fibrose cística, doença crônica que impede que seus
+            pulmões
+            funcionem como deveriam. Para conseguir um transplante, ela precisa seguir seu tratamento e eliminar
+            qualquer chance de infecção,
+            o que significa ficar a pelo menos seis passos de outros pacientes com a doença – sem exceção.<br>
+
+            Will Newman não dá a mínima para o novo tratamento experimental para o qual foi selecionado. Prestes a
+            completar dezoito anos,
+            ele mal pode esperar para finalmente se livrar das máquinas e hospitais, usando o pouco de vida que ainda
+            lhe resta para conhecer
+            o mundo.<br>
+
+            Stella e Will são muito diferentes. Ao mesmo tempo, sua doença não é a única coisa que os une. Eles não
+            podem se aproximar,
+            mas, conforme sua conexão aumenta, os seis passos entre eles passam a ser insuportáveis. E se pudessem
+            quebrar as regras?
+            Cinco passos são tão perigosos quanto perder um grande amor?
+        </p>
+    </div>
+    <h2 class="titulo2">Mil beijos de garoto</h2>
+    <div class="container">
+        <img class="img" src="./assets/img/milbeijos.jpg" alt="Capa do livro Mil beijos de garoto">
+        <p class="texto">
+            Um beijo dura um instante.
+            Mas mil beijos podem durar uma vida inteira.<br>
+            Um garoto.<br>
+            Uma garota.<br>
+            Um vínculo que é definido num momento e se prolonga por uma década.<br>
+            Um vínculo que nem o tempo nem a distância podem romper.<br>
+            Um vínculo que vai durar para sempre.<br>
+            Ao menos era o que eles imaginavam.<br>
+            Quando, aos dezessete anos, Rune Kristiansen retorna da Noruega para o lugar onde passou a infância –
+            a cidade americana de Blossom Grove, na Geórgia –, ele só tem uma coisa em mente: reencontrar Poppy
+            Litchfield,
+            a garota que era sua cara-metade e que tinha prometido esperar fielmente por seu retorno. E ele quer
+            descobrir por que,
+            nos dois anos em que esteve fora, ela o deletou de sua vida sem dar nenhuma explicação.
+        </p>
+    </div>
+
+    </div>
+
+    <footer>
+        <div class="links">
+            <a href="https://www.linkedin.com/in/renata-floro/" target="_blank">
+                <img class="tm-social" src="./assets/img/linkedin.png" alt="logolinkedin">
+            </a>
+            <a href="https://github.com/renatafloro" target="_blank">
+                <img class="tm-social" src="./assets/img/github.png" alt="logogithub">
+            </a>
+            <a href="https://www.instagram.com/re_lendo_/" target="_blank">
+                <img class="tm-social" src="./assets/img/instagram.png" alt="logoinstagram">
+            </a>
+
+        <p >
+            Todos os direitos reservados: Renata Floro &copy;
+        </p>
+         </div>
+    </footer>
 
 </body>
 
