--- a/deixesuamensagem.html
+++ b/deixesuamensagem.html
@@ -31,19 +31,22 @@
             <form>
                 <div class="campos">
                     <label for="nome">Nome:</label>
-                    <input type="text" id="nome">
+                    <input type="text" id="nome" onkeyup="validaNome()">
+                    <div id="txtNome"></div>
                 </div>
                 <div class="campos">
                     <label for="email">E-mail:</label>
-                    <input type="email" id="email">
+                    <input type="email" id="email" onkeyup="validaEmail()">
+                    <div id="txtEmail"></div>
                 </div>
                 <div class="campos">
                     <label for="mensagem">Mensagem:</label> <br>
-                    <textarea name="mensagem" id="mensagem" cols="60" rows="5">
+                    <textarea name="mensagem" id="mensagem" cols="60" rows="5" onkeyup="validaMensagem()">
                 </textarea>
+                <div id="txtMensagem"></div>
                 </div>
 
-                <button>Enviar</button>
+                <button onclick="enviar()">Enviar</button>
             </form>
         </div>
 
@@ -55,7 +58,7 @@
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31603.00389619333!2d-34.873927!3d-8.063128!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7caecfbcc5347f69!2sPorto%20Digital%20-%20NGPD%20(N%C3%BAcleo%20de%20Gest%C3%A3o%20do%20Porto%20Digital)!5e0!3m2!1spt-PT!2sbr!4v1637779908194!5m2!1spt-PT!2sbr"
                 width="400" height="250" frameborder="0" style="border: 0" allowfullscreen="" aria-hidden="false"
-                tabindex="0"></iframe>
+                tabindex="0" onmousemove="mapaZoom()" onmouseout="mapanormal()" id="mapa"></iframe>
         </div>
     </div>
     </div>
@@ -77,6 +80,8 @@
             </p>
         </div>
     </footer>
+
+    <script src="assets/js/script.js"></script>
 
 </body>
 
